fixed spacing issue in about section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -677,10 +677,6 @@ ABOUT SECTION
   }
 }
 
-.about-article {
-  margin: 2rem 0;
-  margin: auto;
-}
 .section-about {
   padding: 3rem 0;
 }
@@ -706,6 +702,10 @@ blockquote {
 .about-article {
   width: 90vw;
   margin: auto;
+  margin: 2rem 0;
+  margin: auto;
+  height: 100%;
+  display: grid;
 }
 @media screen and (min-width: 992px) {
   .about-article {
@@ -717,6 +717,8 @@ blockquote {
     padding-bottom: 0;
     border-left: 6px solid #8004CE;
     padding-left: 2rem;
+    background: white;
+    padding: 2rem 2rem;
   }
   .about-article .who .learn-more-btn {
     transform: translateY(12px);
@@ -728,14 +730,26 @@ blockquote {
     margin: 0;
   }
 }
+@media screen and (min-width: 1400px) {
+  .about-article {
+    height: 100%;
+  }
+}
 
 @media screen and (min-width: 1400px) {
   .who {
-    transform: translateY(-50%);
+    transform: translateY(-40%);
+    align-self: flex-start;
+  }
+
+  .what {
+    align-self: center;
+    transform: translateY(10%);
   }
 
   .how {
-    transform: translateY(50%);
+    transform: translateY(60%);
+    align-self: flex-end;
   }
 }
 .logo-wrapper {
@@ -766,21 +780,6 @@ blockquote {
   color: #8004CE;
   margin-bottom: 0;
   padding-bottom: 1rem;
-}
-
-.who ul, .what ul, .how ul {
-  width: 100%;
-  /* transform: translateX(100px); */
-  list-style-type: square;
-  padding: 0 3rem;
-}
-
-.who ul li, .what ul li, .how ul li {
-  padding: 0.5rem;
-}
-
-.how h3 {
-  width: 217px;
 }
 
 /*
