--- a/scss/sections/_about.scss
+++ b/scss/sections/_about.scss
@@ -13,6 +13,8 @@ ABOUT SECTION
     flex-direction: column;
     // padding-bottom: 4rem;
 
+    
+
     .quote {
         // background: rgba(128, 4, 206, 0.4);
 
@@ -33,16 +35,19 @@ ABOUT SECTION
             }
         }
     }
+
+    // @media screen and (min-width: 1400px){
+    //     hr {
+    //         height: 5px;
+    //         background: $main-accent-clr;
+    //         transform: rotate(10deg) translateY(-290px) translateX(-40px);
+    //         z-index: -1;
+    //         overflow: hidden;
+    //     }
+    // }
 }
 
-.about-article {
-    margin: 2rem 0;
-    margin: auto;
 
-    @media screen and (min-width: 1400px){
-        
-    }
-}
 
 .section-about {
     padding: 3rem 0;
@@ -69,7 +74,11 @@ blockquote {
 .about-article {
     width: 90vw;
     margin: auto;
-    // display: grid;
+    margin: 2rem 0;
+    margin: auto;
+    height: 100%;
+    // height: 100vh;
+    display: grid;
     // grid-template-columns: auto auto;
 
     @media screen and (min-width: 992px){
@@ -84,7 +93,9 @@ blockquote {
             padding-bottom: 0;
             border-left: 6px solid $lighter-purple;
             padding-left: 2rem;
+            background: white;
             // background: #FCFCFD;
+            padding: 2rem 2rem;
         }
 
         .who {
@@ -101,16 +112,33 @@ blockquote {
             margin: 0;
         }
     }
+
+    @media screen and (min-width: 1400px){
+        height: 100%;
+    }
 }
 
 @media screen and (min-width: 1400px){
     .who {
-        transform: translateY(-50%);
+        transform: translateY(-40%);
+        // padding: 2rem;
+        align-self:flex-start;
+    }
+
+    .what {
+        // height: 300px;
+        align-self: center;
+        transform: translateY(10%);
     }
 
     .how {
-        transform: translateY(50%);
+        transform: translateY(60%);
         // margin-bottom: 4rem;
+        align-self: flex-end;
+    }
+
+    .who, .what, .how {
+        
     }
 }
 
@@ -165,21 +193,23 @@ blockquote {
     
 }
 
-.who ul, .what ul, .how ul {
-    width: 100%;
-    /* transform: translateX(100px); */
-    list-style-type: square;
-    padding: 0 3rem;
-}
 
-.who ul li, .what ul li, .how ul li {
-    padding: 0.5rem;
-}
 
-.how h3 {
-    width: 217px;
-}
+// .who ul, .what ul, .how ul {
+//     width: 100%;
+//     /* transform: translateX(100px); */
+//     list-style-type: square;
+//     padding: 0 3rem;
+// }
 
-.about .btn {
-    // margin:  3rem auto;
-}
+// .who ul li, .what ul li, .how ul li {
+//     padding: 0.5rem;
+// }
+
+// // .how h3 {
+// //     width: 217px;
+// // }
+
+// .about .btn {
+//     // margin:  3rem auto;
+// }
